outputtelem/legacy_main_20260219_185908_stderr.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\main.py", line 925, in <module>
    main()
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\main.py", line 876, in main
    scored = score_board(board=board, logs=logs, cfg=cfg, iael_df=iael_df)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\main.py", line 831, in score_board
    from Atlas.stages.score.score_board import run_score_board
  File "C:\Users\rick\projects\Atlas\src\Atlas\stages\score\score_board.py", line 8, in <module>
    from Atlas.engine.new_probability import simulate_leg_probability_new
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\new_probability.py", line 209
    if "out_player" in cols:
IndentationError: unexpected indent
